@@ -15,44 +15,62 @@
  */
 
 plugins {
-    id 'com.github.jacobono.jaxb' version '1.3.5'
+  id 'org.unbroken-dome.xjc'
+  id 'org.ehcache.build.deploy'
+  id 'biz.aQute.bnd.builder'
+  id 'java-test-fixtures'
 }
-
-apply plugin: EhDeploy
 
 dependencies {
-  compile project(':api'), project(':core'), project(':impl')
+  api project(':api')
+  implementation project(':core')
+  implementation project(':impl')
+  providedImplementation "org.glassfish.jaxb:jaxb-runtime:$parent.jaxbVersion"
 
-  // Constrained to JAXB 2.1 due to JDK 1.6 compatibility requirements
-  jaxb 'com.sun.xml.bind:jaxb-xjc:2.1.17'
-  jaxb 'com.sun.xml.bind:jaxb-impl:2.1.17'
-  jaxb 'javax.xml:jaxb-api:2.1'
+  testFixturesApi 'org.xmlunit:xmlunit-core:2.6.0', 'org.xmlunit:xmlunit-matchers:2.6.0'
+  xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-fluent-api:3.0'
+  xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
 }
 
-def generatedSources = "src/generated/java"
-
-sourceSets.main.java {
-  srcDir generatedSources
+configurations.xjcClasspath.resolutionStrategy.dependencySubstitution {
+  substitute module('commons-beanutils:commons-beanutils:1.9.3') with module('commons-beanutils:commons-beanutils:1.9.4')
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
+jar {
+  bnd (
+    'Export-Package': 'org.ehcache.xml, org.ehcache.xml.exceptions, org.ehcache.xml.model',
+    'Import-Package': "javax.xml.bind*;version=\"${parent.jaxbVersion}\", *"
+  )
+}
+
+xjcGenerate {
+  source = ['src/main/resources/ehcache-core.xsd', 'src/main/resources/ehcache-multi.xsd']
+  extension = true
+  extraArgs = ['-Xfluent-api', '-Xannotate']
+}
+
+configurations {
+  lowerBoundTestRuntime.extendsFrom testRuntimeClasspath
+}
+configurations {
+  lowerBoundTestRuntime {
+    resolutionStrategy.dependencySubstitution {
+      substitute module('org.glassfish.jaxb:jaxb-runtime') with module('com.sun.xml.bind:jaxb-impl:2.2.8-b01')
+    }
   }
 }
-
-jaxb {
-  xsdDir = "$name/src/main/resources"
-  episodesDir = "$name/build/xsd/episodes"
-  bindingsDir = "$name/build/xsd/bindings"
-  xjc {
-    destinationDir = generatedSources
-    generatePackage    = "org.ehcache.xml.model"
-  }
-
-  compileJava.dependsOn "xjc"
+dependencies {
+  lowerBoundTestRuntime 'com.sun.activation:javax.activation:1.2.0'
 }
 
-clean {
-  delete generatedSources
+tasks.register('lowerBoundTest', Test) {
+  group = JavaBasePlugin.VERIFICATION_GROUP
+  //remove the original runtime classpath
+  classpath -= configurations.testRuntimeClasspath
+  //add the classpath we want
+  classpath += configurations.lowerBoundTestRuntime
+}
+
+tasks.named('check') {
+  dependsOn tasks.lowerBoundTest
 }
